2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/dl-sysdep.c: Conditionalize contents on [SHARED].

        * hurd/hurd/fd.h (_hurd_fd_get): Call HURD_CRITICAL_BEGIN/
        HURD_CRITICAL_END around holding _hurd_dtable_lock.
        * sysdeps/mach/hurd/dirfd (dirfd): Likewise.
        * sysdeps/mach/hurd/opendir.c (_hurd_fd_opendir): Call
        HURD_CRITICAL_BEGIN/HURD_CRITICAL_END around holding
        d->port.lock.

        * hurd/catch-signal.c (hurd_catch_signal): Use sigsetjmp/siglongjmp
        instead of setjmp/longjmp to restore the signal mask.  Call sigsetjmp
        when handler == SIG_ERR, not when handler != SIG_ERR.

2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/mach/hurd/bits/socket.h: New file, copy from the bsd4.4 one.
	(SOCK_MAX, SOCK_TYPE_MASK, SOCK_CLOEXEC, SOCK_NONBLOCK): New
	definitions.

	accept4 for GNU Hurd.
	* include/sys/socket.h (__libc_accept4): New prototype.
	* sysdeps/mach/hurd/accept4.c: New file, copy from accept.c.  Evolve it
	to implement __libc_accept4.
	* sysdeps/mach/hurd/accept.c (accept): Reimplement using
	__libc_accept4.
	* sysdeps/mach/hurd/kernel-features.h (__ASSUME_ACCEPT4): Define.

	* sysdeps/mach/hurd/i386/____longjmp_chk.S: New file.
	* sysdeps/mach/hurd/i386/signal-defines.sym: New file.
	* sysdeps/mach/hurd/i386/Makefile (gen-as-const-headers): Add
	signal-defines.sym.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

        * bits/in.h (SOL_IP, SOL_IPV6, SOL_ICMPV6): New macros.

2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/mach/hurd/dl-sysdep.c (open_file): Do not raise
	assertion on O_CLOEXEC flag.
	* hurd/hurd/fd.h: Update comment to mention O_CLOEXEC.
	* hurd/intern-fd.c: Likewise.
	* hurd/port2fd.c: Likewise.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[BZ #3906]
	* bits/in.h (IPV6_PKTINFO): Define new macro.
	(IPV6_RXINFO,IPV6_TXINFO,SCM_SRCINFO): Redefine to IPV6_PKTINFO.
